[package]
name = "htmx"
version = "0.1.0"
edition = "2021"
categories = []
description = "Some server side utilities for htmx"
keywords = []
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ModProg/htmx"
documentation = "https://docs.rs/htmx"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["actix-web"]
sorted_attributes = []

[dependencies]
html = "0.6.1"
quote-use = { version = "0.7.1", features = ["namespace_idents"] }
htmx-macros = { version = "0.1.0", path = "htmx-macros" }
derive_more = { version = "1.0.0-beta.3", features = ["as_ref", "deref", "deref_mut", "from", "constructor", "display"] }
html-escape = "0.2.13"
forr = "0.1.1"
actix-web = { version = "4.4.0", default-features = false, optional = true }

[dev-dependencies]
insta = "1.31.0"
# Enables `sorted_attributes` for tests, to make assertions stable.
htmx = { path = ".", default-features = false, features = [
    "sorted_attributes",
] }
actix-web = { version = "4.4.0" }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.release]
shared-version = true

[[example]]
name = "actix"
path = "examples/actix.rs"
required-features = ["actix-web"]

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = '## \[Unreleased\]'
replace = """
<!-- ## [Unreleased] -->
## [{{version}}] - {{date}}\
"""
[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = '\[unreleased\]: (.*)/(v.*)\.\.\.HEAD'
replace = """
[unreleased]: $1/{{tag_name}}...HEAD
[{{version}}]: $1/$2...{{tag_name}}\
"""
