[workspace]
members = ["example"]

[package]
name = "htmx"
version = "0.1.0"
edition = "2021"
categories = []
description = "Some server side utilities for htmx"
keywords = []
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ModProg/htmx"
documentation = "https://docs.rs/htmx"

[features]
default = ["axum", "actix-web"]
sorted_attributes = []
axum = ["dep:axum-core"]

[dependencies]
html = "0.6.1"
quote-use = { version = "0.7.1", features = ["namespace_idents"] }
htmx-macros = { version = "0.1.0", path = "htmx-macros" }
derive_more = { version = "1.0.0-beta.3", features = ["as_ref", "deref", "deref_mut", "from", "constructor", "display"] }
html-escape = "0.2.13"
forr = "0.2.1"
actix-web = { version = "4.4.0", default-features = false, optional = true }
axum-core = { version = "0.3.4", optional = true }
serde = "1.0.188"
serde_json = "1.0.107"
typed-builder = {git = "https://github.com/ModProg/rust-typed-builder", branch = "mutators"}
chrono = "0.4.31"

[dev-dependencies]
insta = "1.31.0"
# Enables `sorted_attributes` for tests, to make assertions stable.
htmx = { path = ".", default-features = false, features = [
    "sorted_attributes",
] }
serde = { version = "1.0.188", features = ["derive"] }

[profile.dev.package.insta]
opt-level = 3

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.release]
shared-version = true

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = '## \[Unreleased\]'
replace = """
<!-- ## [Unreleased] -->
## [{{version}}] - {{date}}\
"""
[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = '\[unreleased\]: (.*)/(v.*)\.\.\.HEAD'
replace = """
[unreleased]: $1/{{tag_name}}...HEAD
[{{version}}]: $1/$2...{{tag_name}}\
"""
