[package]
name = "htmx-script"
version = "0.1.0"
edition = "2021"
categories = []
description = "Rust to js transpiler"
keywords = []
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ModProg/htmx"
documentation = "https://docs.rs/htmx-script"

[dependencies]
syn = { version = "2", features = ["parsing", "printing"], default-features = false }

# example dependencies
actix-web = "4.4.0"

axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"] }

tauri-runtime = "0.14"
tauri-runtime-wry = "0.14"
url = "2.4.1"
quote-use = { version = "0.7.2", features = ["namespace_idents"] }
quote = "1.0.33"
proc-macro2 = "1.0.66"
proc-macro-utils = "0.8.0"

[profile.dev.package.insta]
opt-level = 3

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.release]
shared-version = true

[[example]]
name = "actix"
path = "examples/actix.rs"
required-features = ["actix-web"]

[[example]]
name = "axum"
path = "examples/axum.rs"
required-features = ["axum"]

[dev-dependencies]
insta = "1.31.0"

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = '## \[Unreleased\]'
replace = """
<!-- ## [Unreleased] -->
## [{{version}}] - {{date}}\
"""
[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = '\[unreleased\]: (.*)/(v.*)\.\.\.HEAD'
replace = """
[unreleased]: $1/{{tag_name}}...HEAD
[{{version}}]: $1/$2...{{tag_name}}\
"""
