[package]
name = "htmx-script"
version = "0.1.0"
edition = "2021"
categories = []
description = "Rust to js transpiler"
keywords = []
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ModProg/htmx"
documentation = "https://docs.rs/htmx-script"

[dependencies]
syn = { version = "2", features = [ "parsing", "printing" ], default-features = false }
quote-use = { version = "0.7.2", features = ["namespace_idents"] }
quote = "1.0.33"
proc-macro2 = "1.0.66"
proc-macro-utils = "0.8.0"

[dev-dependencies]
insta = "1.31.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.release]
shared-version = true

